# lICoCorne

./: .gitignore  README.md  deploy.sh  pyproject.toml
config/: bash_utils.sh
src/: README.md
src/licocorne/: icoco.py  name_enum.py  procs.py  struct.py
src/licocorne/procedures/: compute_power.py  critical_boron.py  set_boron.py
tests/: .gitignore  test_icoco900.py  test_input_file.py  test_thm.py
tests/thm/: solver.py
tests/thm/simplePOW_proc/: IniPowCompo.c2m  SetFuelMap.c2m
utils/: up_version.sh
